fixed back button not showing up

--- a/Rules/style.css
+++ b/Rules/style.css
@@ -2,3 +2,13 @@
     color: white;
     border: black;
 }
+
+#Back {
+    background-color: red;
+    border: black;
+    color: rgb(0, 0, 0);
+    padding: 7px 24px;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 1.5;
+}
